[package]
name = "rust-ml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accelerate-src = "0.3.2"
blas = "0.22.0"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }
clippy = "0.0.302"
ndarray = "0.15.6"
openblas-src = "0.10.8"
plotly = "0.8.4"
safetensors = "0.4.0"
